bleme/postgres/base/resources/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15
        command: ["sh"]
        # args: ["-c", "while true; do echo $(date -u) >> /tmp/run.log; sleep 5; done"]
        # imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-data-storage
      volumes:
      - name: postgres-data-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
